--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -37,12 +37,12 @@
         android:layout_gravity="start"
         tools:layout="@layout/fragment_navigation_drawer" />
 
-    <!-- <fragment
+    <fragment
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/map"
         android:name="com.google.android.gms.maps.MapFragment"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" /> -->
+        android:layout_height="match_parent" />
     
     <com.getbase.floatingactionbutton.AddFloatingActionButton
         android:layout_width="wrap_content"
