--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -45,6 +45,7 @@
         android:layout_height="match_parent" />
     
     <com.getbase.floatingactionbutton.AddFloatingActionButton
+        android:id="@+id/createMeeting"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         fab:fab_plusIconColor="@color/white"
